# ggpoCCS

./: .gitmodules  CMakeLists.txt  README.cn.md  README.md  buildLibs.bat  buildNDK.bat  buildNicenet.bat  buildServer.bat  buildTest.bat  buildTestCS.bat  cleanLibs.bat  cleanTest.bat  test1.bat  test2.bat  testCS1.bat  testCS2.bat
forUnity/: GGPO.cs  GGPOSession.cs
ggposerver/: buildTest.sh  ggpoServer.cpp
include/: GGPOCSClient.h  GGPOCSMessage.hpp  ggponet.h  kfifo
lib/ggpo/: game_input.cpp  ggpo.cpp  ggpolog.cpp  ggpolog.h  input_queue.cpp  log.cpp  main.cpp  platform_windows.cpp  platform_windows.h  poll.cpp  sync.h  timesync.h  types.h
lib/ggpo/backends/: backend.h  csbackend.cpp  csbackend.h  p2p.cpp  p2p.h  spectator.h  synctest.h
lib/ggpo/network/: cs.cpp  cs.h  cs_proto.cpp  cs_proto.h  udp.cpp  udp.h  udp_msg.h  udp_proto.cpp  udp_proto.h
ndkBuild/: build.bat
vectorwar/: CMakeLists.txt  gdi_renderer.cpp  ggpo_perfmon.cpp  main.cpp  vectorwar.cpp
vectorwarCS/: CMakeLists.txt  CMakeSources.cmake  gdi_renderer.cpp  main.cpp  vectorwar.cpp  vectorwar.h
vs2017CS/: ggpo.vcxproj  ggpo.vcxproj.filters
vs2017Server/: ggpo.vcxproj  ggpo.vcxproj.filters  ggpoServer.sln
vs2017UDP/: ggpo.vcxproj  ggpo.vcxproj.filters
